# codex-move-session

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
.superpowers/sdd/: final-review-fixes-report.md
docs/superpowers/plans/: 2026-07-16-session-delete.md
docs/superpowers/specs/: 2026-07-16-session-delete-design.md
src/codex_move_session/: __init__.py  cli.py  delete.py  discovery.py  doctor.py  paths.py  planner.py  session_files.py  sqlite_read.py  storage.py  windows_file.py
tests/: test_apply.py  test_cli.py  test_delete.py  test_discovery.py  test_doctor.py  test_paths.py  test_planner.py  test_sqlite_read.py
